# crucible

./: Cargo.toml
.github/workflows/: ci.yml
backend/: Cargo.toml  README.md
backend/src/: error.rs  jobs.rs  lib.rs  main.rs
backend/src/api/: mod.rs
backend/src/api/handlers/: dashboard.rs  mod.rs  profiling.rs
backend/src/config/: mod.rs  reload.rs
backend/src/services/: error_recovery.rs  feature_flags.rs  mod.rs  sys_metrics.rs  tracing.rs
backend/src/test_utils/: mod.rs
backend/tests/: api_tests.rs
backend/tests/load/: profile_load.rs  status_load.rs
contracts/crucible/src/: cost.rs  env.rs
src/: account.rs  cost.rs  env.rs  fixture.rs  lib.rs  macros.rs  prelude.rs  token.rs
