[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "backup"
path = "src/bin/backup.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono", "uuid"] }
redis = { version = "0.24", features = ["tokio-comp", "json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["trace"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
hyper = { version = "1.0", features = ["full"] }
mime = "0.3"
tokio = { version = "1", features = ["full", "test-util"] }
